Added link icons and temporarily removed navbar

--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Wojnicki</title>
     <link rel="stylesheet" href="./styles/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+
     <style>
       .jumbotron {
         background: url(https://images.unsplash.com/photo-1554306274-f23873d9a26c);
         background-size: cover;
         background-repeat: no-repeat;
-        height: calc(100vh - 56px);
+        height: 100vh;
         margin-bottom: 0;
         color: #fff;
+      }
+      .jumbotron i {
+        font-size: 42px;
+        margin-right: 18px;
+        border: 1px solid #fff;
+        padding: 20px;
+        border-radius: 50%;
+      }
+      .jumbotron a {
+        color: #fff;
+        transition: filter 0.4s ease-in-out;
+      }
+      .jumbotron a:hover {
+        filter: brightness(80%);
       }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">A. Wojnicki</a>
-        <!-- <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarColor02"
-          aria-controls="navbarColor02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
-
-        <div class="collapse navbar-collapse" id="navbarColor02">
-          <ul class="navbar-nav mr-auto">
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li> -->
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid text-center">
       <div class="container">
         <h1 class="display-4">Adam Wojnicki</h1>
         <p class="lead">Self-taught and passionate front-end developer.</p>
+        <a href="https://www.linkedin.com/in/adam-wojnicki-58a58215b/">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/adamwojnicki">
+          <i class="fab fa-github"></i>
+        </a>
       </div>
     </div>
   </body>
