Removed bootstrap and rewrote hero section markup

--- a/index.html
+++ b/index.html
@@ -4,51 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adam Wojnicki</title>
-    <link rel="stylesheet" href="./styles/bootstrap.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-
-    <style>
-      .jumbotron {
-        background: url(https://images.unsplash.com/photo-1554306274-f23873d9a26c);
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 100vh;
-        margin-bottom: 0;
-        color: #fff;
-      }
-      .jumbotron i {
-        font-size: 42px;
-        margin-right: 18px;
-        border: 1px solid #fff;
-        padding: 20px;
-        border-radius: 50%;
-      }
-      .jumbotron a {
-        color: #fff;
-        transition: filter 0.4s ease-in-out;
-      }
-      .jumbotron a:hover {
-        filter: brightness(80%);
-      }
-    </style>
   </head>
   <body>
-    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="container">
-        <h1 class="display-4">Adam Wojnicki</h1>
-        <p class="lead">Self-taught and passionate front-end developer.</p>
-        <a href="https://www.linkedin.com/in/adam-wojnicki-58a58215b/">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/adamwojnicki">
-          <i class="fab fa-github"></i>
-        </a>
+    <section class="hero">
+      <div class="hero__content">
+        <h1 class="hero__headline">Adam Wojnicki</h1>
+        <p class="hero__desc">
+          Self-taught and passionate front-end developer.
+        </p>
+        <div class="hero__social">
+          <a href="https://www.linkedin.com/in/adam-wojnicki-58a58215b/">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/adamwojnicki">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
