About section markup

--- a/index.html
+++ b/index.html
@@ -29,5 +29,20 @@
         </div>
       </div>
     </section>
+    <section class="half-text" id="about">
+      <div class="flex-container">
+        <figure class="half-text__img">
+          <img src="./img/portrait.jpg" alt="Me" />
+        </figure>
+        <div class="text-content">
+          <h2 class="text-content__headline">About me</h2>
+          <p class="text-content__desc">
+            Front-end web developer based in Warsaw, poland. Passionate about
+            technologies and digital photography. Self-taught and self-learning.
+            Eager to learn new technologies and gain new experience.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
