animated arrow link in hero section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           </a>
         </div>
       </div>
+      <a href="#about" class="arr-down">
+        <i class="fas fa-chevron-down"></i>
+      </a>
     </section>
     <section class="half-text" id="about">
       <div class="flex-container">
