Added projects section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <section class="hero">
+    <section class="hero" id="home">
       <div class="hero__content">
         <h1 class="hero__headline">Adam Wojnicki</h1>
         <p class="hero__desc">
@@ -44,6 +44,70 @@
             technologies and digital photography. Self-taught and self-learning.
             Eager to learn new technologies and gain new experience.
           </p>
+        </div>
+      </div>
+    </section>
+    <section class="bundle" id="projects">
+      <div class="text-content">
+        <h2 class="text-content__headline">My projects</h2>
+      </div>
+      <div class="grid-container">
+        <div class="project-card">
+          <figure class="project-card__img">
+            <img
+              src="https://via.placeholder.com/488x244"
+              alt="img placeholder"
+            />
+          </figure>
+          <div class="project-card__contents">
+            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <p class="project-card__desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              deserunt, omnis corporis odit nihil veniam.
+            </p>
+            <div class="project-card__ctas">
+              <a href="#"><i class="fas fa-code"></i> Code</a>
+              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <figure class="project-card__img">
+            <img
+              src="https://via.placeholder.com/488x244"
+              alt="img placeholder"
+            />
+          </figure>
+          <div class="project-card__contents">
+            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <p class="project-card__desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              deserunt, omnis corporis odit nihil veniam.
+            </p>
+            <div class="project-card__ctas">
+              <a href="#"><i class="fas fa-code"></i> Code</a>
+              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <figure class="project-card__img">
+            <img
+              src="https://via.placeholder.com/488x244"
+              alt="img placeholder"
+            />
+          </figure>
+          <div class="project-card__contents">
+            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <p class="project-card__desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              deserunt, omnis corporis odit nihil veniam.
+            </p>
+            <div class="project-card__ctas">
+              <a href="#"><i class="fas fa-code"></i> Code</a>
+              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
