Adding projects contents

--- a/index.html
+++ b/index.html
@@ -55,38 +55,46 @@
         <div class="project-card">
           <figure class="project-card__img">
             <img
-              src="https://via.placeholder.com/488x244"
+              src="./img/projects/country-app-shot.png"
               alt="img placeholder"
             />
           </figure>
           <div class="project-card__contents">
-            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <h3 class="project-card__title">Country App</h3>
             <p class="project-card__desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              deserunt, omnis corporis odit nihil veniam.
+              Need some info about certain country? Browse through memory cards
+              of every single country around the world!
             </p>
             <div class="project-card__ctas">
-              <a href="#"><i class="fas fa-code"></i> Code</a>
-              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+              <a href="https://github.com/adamwojnicki/countries-app">
+                <i class="fas fa-code"></i> Code
+              </a>
+              <a href="https://my-countries-app.netlify.app/">
+                <i class="fas fa-globe"></i> Live demo
+              </a>
             </div>
           </div>
         </div>
         <div class="project-card">
           <figure class="project-card__img">
             <img
-              src="https://via.placeholder.com/488x244"
+              src="./img/projects/edie-homepage-shot.png"
               alt="img placeholder"
             />
           </figure>
           <div class="project-card__contents">
-            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <h3 class="project-card__title">Edie Homepage</h3>
             <p class="project-card__desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              deserunt, omnis corporis odit nihil veniam.
+              Simply and clearly designed website for marketing/tech agency.
+              Looks great on every device size.
             </p>
             <div class="project-card__ctas">
-              <a href="#"><i class="fas fa-code"></i> Code</a>
-              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+              <a href="https://github.com/adamwojnicki/eddie-page">
+                <i class="fas fa-code"></i> Code</a
+              >
+              <a href="https://keen-lichterman-5dd3d9.netlify.app/">
+                <i class="fas fa-globe"></i> Live demo
+              </a>
             </div>
           </div>
         </div>
