Added projects to projects section

--- a/index.html
+++ b/index.html
@@ -100,20 +100,21 @@
         </div>
         <div class="project-card">
           <figure class="project-card__img">
-            <img
-              src="https://via.placeholder.com/488x244"
-              alt="img placeholder"
-            />
+            <img src="./img/projects/todo-app-shot.png" alt="img placeholder" />
           </figure>
           <div class="project-card__contents">
-            <h3 class="project-card__title">Lorem, ipsum dolor.</h3>
+            <h3 class="project-card__title">Todo App</h3>
             <p class="project-card__desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              deserunt, omnis corporis odit nihil veniam.
+              Add, complete, delete, browse throught filterable todo list. Never
+              miss a thing you have to do!
             </p>
             <div class="project-card__ctas">
-              <a href="#"><i class="fas fa-code"></i> Code</a>
-              <a href="#"><i class="fas fa-globe"></i> Live demo</a>
+              <a href="https://kind-goldstine-2f0603.netlify.app/">
+                <i class="fas fa-code"></i> Code</a
+              >
+              <a href="https://github.com/adamwojnicki/todo-app">
+                <i class="fas fa-globe"></i> Live demo
+              </a>
             </div>
           </div>
         </div>
