--- a/index.html
+++ b/index.html
@@ -120,5 +120,8 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <p class="footer__text">2020 Adam Wojnicki</p>
+    </footer>
   </body>
 </html>
