Added contact section and hover effects to links

--- a/index.html
+++ b/index.html
@@ -120,6 +120,30 @@
         </div>
       </div>
     </section>
+    <section class="half-text" id="contact">
+      <div class="flex-container">
+        <figure class="half-text__img">
+          <img src="./img/contact.jpg" alt="" />
+        </figure>
+        <div class="text-content">
+          <h2 class="text-content__headline">Contact</h2>
+          <p class="text-content__desc">
+            <i class="fas fa-at"></i>
+            <a href="mailto:wojnicki.adam1@gmail.com"
+              >wojnicki.adam1@gmail.com</a
+            >
+          </p>
+          <div class="contact-icons">
+            <a href="https://www.linkedin.com/in/adam-wojnicki-58a58215b/">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/adamwojnicki">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <p class="footer__text">2020 Adam Wojnicki</p>
     </footer>
