Fixed typos in copy texts.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="text-content">
           <h2 class="text-content__headline">About me</h2>
           <p class="text-content__desc">
-            Front-end web developer based in Warsaw, poland. Passionate about
+            Front-end web developer based in Warsaw, Poland. Passionate about web
             technologies and digital photography. Self-taught and self-learning.
             Eager to learn new technologies and gain new experience.
           </p>
