--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <nav class="navigation">
+      <ul class="nav-menu">
+        <li class="nav-menu__item"><a href="#home">Home</a></li>
+        <li class="nav-menu__item"><a href="#about">About</a></li>
+        <li class="nav-menu__item"><a href="#projects">Projects</a></li>
+        <li class="nav-menu__item"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
     <section class="hero" id="home">
       <div class="hero__content">
         <h1 class="hero__headline">Adam Wojnicki</h1>
