--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li class="nav-menu__item"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <button class="nav-menu-toggle">
+      <i class="fas fa-bars"></i>
+    </button>
     <section class="hero" id="home">
       <div class="hero__content">
         <h1 class="hero__headline">Adam Wojnicki</h1>
