--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/navigation.js" defer></script>
   </head>
   <body>
     <nav class="navigation">
