Added tracking script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     />
     <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/navigation.js" defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-03K6PQJDB9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-03K6PQJDB9");
+    </script>
   </head>
   <body>
     <nav class="navigation">
@@ -52,9 +66,10 @@
         <div class="text-content">
           <h2 class="text-content__headline">About me</h2>
           <p class="text-content__desc">
-            Front-end web developer based in Warsaw, Poland. Passionate about web
-            technologies and digital photography. Self-taught and self-learning.
-            Eager to learn new technologies and gain new experience.
+            Front-end web developer based in Warsaw, Poland. Passionate about
+            web technologies and digital photography. Self-taught and
+            self-learning. Eager to learn new technologies and gain new
+            experience.
           </p>
         </div>
       </div>
