--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adam Wojnicki</title>
+    <title>Redirecting to https://webcreations.dev</title>
+    <meta http-equiv="refresh" content="0; URL=https://webcreations.dev/" />
+    <link rel="canonical" href="https://webcreations.dev/" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
